# chbox

./: .gitmodules  CMakeLists.txt  README.md  bwrapx  chbox-chroot  chbox-chroot.in  chbox-debootstrap  chbox-debootstrap.in  chbox-fakeroot  chbox.sh  chbox.sh.in  disable_file_offset_bits.patch  disable_have_capset.patch  test_bwrapx
docker/centos-7/: Dockerfile
docker/rockylinux-8.8/: Dockerfile
scripts/: chroot.fakechroot.sh  fakechroot.sh
src/: chroot.c  ftw.c  getcwd_real.c  realpath.c  stat_ver.h
